--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   max-width: 1280px;
   text-align: center;
 }
+html {
+  scroll-behavior: smooth;
+}
+
+a{
+  color: black;
+}
 
 .logo {
   height: 6em;
