--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,13 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: inherit; /* This will make the link inherit the color from its parent element */
+  text-decoration: none;
 }
 a:hover {
-  color: #535bf2;
+  color: orange;
 }
+
 
 body {
   margin: 0;
